🚀 ci(pipeline): update PATH for iOS E2E tests
Add $HOME/.pub-cache/bin to PATH in the pipeline to ensure required binaries are available when running iOS end-to-end tests.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -204,7 +204,7 @@ stages:
 
       - bash: |
           set -euo pipefail
-          export PATH="$(FlutterToolPath):$PATH"
+          export PATH="$HOME/.pub-cache/bin:$(FlutterToolPath):$PATH"
           cd "$(EXAMPLE_DIR)"
           patrol test patrol_test/app_test.dart --dart-define=LUSCII_API_KEY="$LUSCII_API_KEY" --device="$(SIM_UDID)"
         displayName: "Run iOS E2E"
