feat: add getSelfcareActions for iOS and Android (#41)
* ✨ feat: add getSelfcareActions for iOS and Android

Introduce getSelfcareActions API to retrieve self-care actions for authenticated users on both iOS and Android. Update platform interfaces, implementations, example app, and documentation. Bump versions and update dependencies to 0.7.0+1.

* 🔧 chore(cspell): add 'Selfcare' to word list

Update cspell.json to include 'Selfcare' and 'selfcare' in the allowed words to prevent false spelling errors.

* 🧪 test(android,ios): add getSelfcareActions tests

Add unit tests for getSelfcareActions method in both Android and iOS SDKs, verifying correct response and exception handling. Update changelogs to document the new feature for iOS and Android platform interface.

* 🌈 style(tests): update button label in integration test

Change references from 'Get actions' to 'Get today actions' in app_test.dart to match updated UI. Minor formatting adjustment in test_bundle.dart for consistency.

* 🦄 refactor(tests): migrate to patrol_test directory

Rename integration_test to patrol_test for consistency with Patrol framework. Update imports and workflow scripts to reflect new structure. Bump Patrol dependency to v4.1.0.

* ✨ feat(actions): combine today and self-care actions

Update both Android and iOS plugins to fetch and merge todayActions and selfCareActions when retrieving actions. Also add VSCode launch configuration and update .gitignore to allow .vscode directory.

* 🔧 chore(ios): update bundle id and dev team for example

Change PRODUCT_BUNDLE_IDENTIFIER to 'nl.digizorg.example' and DEVELOPMENT_TEAM to '7V39QJ3R63' in Xcode project for the example app. Also update Info.plist to properly set CADisableMinimumFrameDurationOnPhone and UIApplicationSupportsIndirectInputEvents keys.

* 🚀 ci(ios): update macOS, Xcode, and simulator model

Switch ios job to macos-26, use Xcode 26.2, and set simulator to iPhone 17 for compatibility with latest development tools.

* 🔧 chore(ci): 

--- a/luscii_patient_actions_sdk/example/pubspec.yaml
+++ b/luscii_patient_actions_sdk/example/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.2.3
   luscii_patient_actions_sdk:
     # When depending on this package from a real application you should use:
     #   luscii_patient_actions_sdk: ^x.y.z
@@ -24,7 +25,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  patrol: ^3.17.0
+  patrol: ^4.1.0
   very_good_analysis: ^10.0.0
 
 dependency_overrides:
