--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -30,7 +30,7 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
-      flutter_version: 3.35.5
+      flutter_version: 3.38.7
       min_coverage: 70
       working_directory: luscii_patient_actions_sdk
 
@@ -61,7 +61,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.35.5"
+          flutter-version: "3.38.7"
           channel: "stable"
 
       - name: Install Patrol CLI
@@ -96,7 +96,7 @@ jobs:
           api-level: 34
           arch: x86_64
           target: google_apis
-          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
+          script: cd luscii_patient_actions_sdk/example && patrol test patrol_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
 
       - name: Upload Android Test Reports
         uses: actions/upload-artifact@v4
@@ -106,56 +106,4 @@ jobs:
           path: |
             luscii_patient_actions_sdk/example/build/app/reports/
             luscii_patient_actions_sdk/example/build/test-results/
-          retention-days: 30
-
-  ios:
-    runs-on: macos-15
-
-    defaults:
-      run:
-        working-directory: luscii_patient_actions_sdk/example
-
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: Select Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_16.4.app
-
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.35.5"
-          channel: "stable"
-
-      - name: Install Patrol CLI
-        run: flutter pub global activate patrol_cli
-
-      - name: Run Flutter Pub Get
-        run: |
-          flutter pub get
-
-      - name: Prepare iOS project
-        run: |
-          cd ios
-          pod install --repo-update
-          cd ..
-
-      - name: Set up iOS simulator
-        id: simulator
-        uses: futureware-tech/simulator-action@v4
-        with:
-          model: "iPhone 16"
-
-      - name: E2E Tests
-        env:
-          LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
-        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${{ steps.simulator.outputs.udid }}"
-
-      - name: Upload iOS Test Reports
-        uses: actions/upload-artifact@v4
-        if: always() # Upload reports even if tests fail
-        with:
-          name: ios-test-reports
-          path: |
-            luscii_patient_actions_sdk/example/build/ios_results*/
-            luscii_patient_actions_sdk/example/ios/test_output/
           retention-days: 30
