--- a/luscii_patient_actions_sdk_android/pubspec.yaml
+++ b/luscii_patient_actions_sdk_android/pubspec.yaml
@@ -14,6 +14,7 @@ flutter:
       android:
         package: nl.digizorg
         pluginClass: LusciiPatientActionsSdkPlugin
+        dartPluginClass: LusciiPatientActionsSdkAndroid
 
 dependencies:
   flutter:
